(refactor) management of the Go command with the Look command dependency, items with multiple words and  available bag slot v. 1.9.5